--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,7 @@ install:
   - ps: Install-Product node 8
   - git submodule update --init --recursive
   - yarn install
+  - yarn install-plugins
   - yarn ci:compile
 
 test_script:
