--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "release": "yarn install --cwd bin && node bin/release.js",
     "test": "tsc -p test && ava",
     "clear": "rm -rf bundles/media",
-    "typedoc": "typedoc --out docs/dist ./app/services --mode modules --theme ./docs/theme --readme ./docs/README.md --ignoreCompilerErrors --excludePrivate --excludeExternals --hideGenerator"
+    "typedoc": "typedoc --out docs/dist ./app/services --mode modules --theme ./docs/theme --readme ./docs/README.md --ignoreCompilerErrors --excludePrivate --excludeExternals --hideGenerator",
+    "compile-tests": "tsc -p test",
+    "screentest": "node test/screentest/runner.js"
   },
   "build": {
     "appId": "com.streamlabs.slobs",
