--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "less-loader": "^2.2.3",
     "lodash-decorators": "^4.3.1",
     "moment": "^2.17.1",
+    "pixelmatch": "^4.0.2",
     "progress": "^2.0.0",
     "raven-js": "^3.20.1",
     "rxjs": "^5.4.3",
