--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Streamlabs streaming software",
   "author": "General Workings, Inc.",
   "license": "GPL-3.0",
-  "version": "0.8.2",
+  "version": "0.8.3-preview.0",
   "main": "main.js",
   "scripts": {
     "compile": "yarn clear && webpack --progress",
@@ -12,6 +12,7 @@
     "start": "electron .",
     "install-plugins": "yarn install --cwd bin && node bin/install-plugins.js",
     "package": "rm -rf dist && build -w --x64 --em.env=production",
+    "package:preview": "rm -rf dist && build -w --x64 --em.env=production --em.name=\"slobs-client-preview\" --config.productName=\"Streamlabs OBS Preview\" --config.appId=\"com.streamlabs.slobspreview\"",
     "release": "yarn install --cwd bin && node bin/release.js",
     "test": "tsc -p test && ava",
     "clear": "rm -rf bundles/media",
