--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "release": "yarn install --cwd bin && node bin/release.js",
     "test": "tsc -p test && ava",
     "clear": "rm -rf bundles/media",
-    "typedoc": "typedoc --out docs/dist ./app/services --mode modules --theme ./docs/theme --readme ./docs/README.md --ignoreCompilerErrors --excludePrivate --excludeExternals --hideGenerator"
+    "typedoc": "typedoc --out docs/dist ./app/services --mode modules --theme ./docs/theme --readme ./docs/README.md --ignoreCompilerErrors --excludePrivate --excludeExternals --hideGenerator",
+    "compile-tests": "tsc -p test",
+    "screentest": "node test/screentest/runner.js"
   },
   "build": {
     "appId": "com.streamlabs.slobs",
@@ -112,6 +114,7 @@
     "less-loader": "^4.0.5",
     "lodash-decorators": "^4.3.1",
     "moment": "^2.17.1",
+    "pixelmatch": "^4.0.2",
     "progress": "^2.0.0",
     "raven-js": "^3.20.1",
     "rxjs": "^5.4.3",
