move to a prebuilt release of OSN

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "font-manager": "^0.2.2",
     "lodash": "^4.17.4",
     "node-libuiohook": "file:./node-libuiohook",
-    "obs-studio-node": "file:./obs-studio-node",
+    "obs-studio-node": "https://github.com/stream-labs/obs-studio-node/releases/download/v0.0.1/obs-studio-node.tar.gz",
     "rimraf": "^2.6.1",
     "socket.io-client": "2.0.3",
     "uuid": "^3.0.1",
