force per machine installation

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "nsis": {
       "license": "AGREEMENT",
       "oneClick": false,
-      "allowToChangeInstallationDirectory": true
+      "allowToChangeInstallationDirectory": true,
+      "perMachine": true
     }
   },
   "ava": {
