--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,7 @@ install:
 
 test_script:
   - yarn screentest
+  - 7z a screentest.zip test-dist\screentest\**\*
 
 artifacts:
   - path: 'test-dist\screentest\**\*'
