--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ install:
 
 test_script:
   - yarn screentest
-  - 7z a screentest.zip test-dist\screentest\**\*
+  - 7z a screentest.zip test-dist\screentest\*
 
 artifacts:
   - path: 'screentest.zip'
