--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ test_script:
   - yarn screentest
   - 7z a screentest.zip test-dist\screentest\*
   - ps: $env:changed_screens = (Get-Content -Raw -Path test-dist\screentest\state.json | ConvertFrom-Json).changedScreens
-  - ps: Add-AppveyorMessage "Changed screens - $env:changed_screens"
+  - ps: if ($env:changed_screens -gt 0) {Add-AppveyorMessage "$env:changed_screens screens has been changed"}
 
 artifacts:
   - path: 'screentest.zip'
@@ -19,4 +19,4 @@ artifacts:
 
 notifications:
   - provider: GitHubPullRequest
-    template: "{{#passed}}:white_check_mark:{{/passed}}{{#failed}}:x:{{/failed}} Screentest is finished {{changed_screens}}"
+    template: "{{#passed}}:white_check_mark:{{/passed}}{{#failed}}:x:{{/failed}} Screentest is finished $env:changed_screens"
