--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
       "url": "https://d1g6eog1uhe0xm.cloudfront.net"
     },
     "nsis": {
-      "license": "AGREEMENT"
+      "license": "AGREEMENT",
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "perMachine": true
     }
   },
   "ava": {
