--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "aws-sdk": "^2.43.0",
     "backtrace-node": "^0.7.3",
     "electron-updater": "^2.18.2",
+    "electron-window-state": "^4.1.1",
     "font-manager": "^0.2.2",
     "lodash": "^4.17.4",
     "node-fontinfo": "^0.0.2",
