--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "backtrace-node": "^0.7.3",
     "electron-updater": "^2.18.2",
     "electron-window-state": "^4.1.1",
-    "font-manager": "^0.2.2",
+    "font-manager": "git+https://github.com/computerquip-streamlabs/font-manager.git",
     "lodash": "^4.17.4",
     "node-fontinfo": "^0.0.2",
     "node-libuiohook": "file:./node-libuiohook",
