--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
       "LICENSE",
       "AGREEMENT"
     ],
+    "includePdb": true,
     "asar": false,
     "publish": {
       "provider": "generic",
@@ -72,7 +73,7 @@
   "dependencies": {
     "aws-sdk": "^2.43.0",
     "backtrace-node": "^0.7.3",
-    "electron-updater": "^2.18.2",
+    "electron-updater": "^2.20.1",
     "electron-window-state": "^4.1.1",
     "font-manager": "git+https://github.com/computerquip-streamlabs/font-manager.git",
     "node-fontinfo": "^0.0.2",
@@ -102,7 +103,7 @@
     "css-loader": "^0.28.7",
     "devtron": "^1.4.0",
     "electron": "1.7.11",
-    "electron-builder": "19.52.1",
+    "electron-builder": "19.56.0",
     "electron-devtools-installer": "^2.2.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
