--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ test_script:
   - yarn screentest
   - 7z a screentest.zip test-dist\screentest\*
   - ps: $env:changed_screens = (Get-Content -Raw -Path test-dist\screentest\state.json | ConvertFrom-Json).changedScreens
-  - ps: If ($env:changed_screens -gt 0) {Add-AppveyorMessage "\:warning\: $env:changed_screens screens have been changed"} else { Add-AppveyorMessage "\:white_check_mark\: no screens changed" }
+  - ps: If ($env:changed_screens -gt 0) {Add-AppveyorMessage ":warningoooo: $env:changed_screens screens have been changed"} else { Add-AppveyorMessage "\:white_check_markooo\: no screens changed" }
 
 artifacts:
   - path: 'screentest.zip'
