--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,4 +22,4 @@ artifacts:
 
 notifications:
   - provider: GitHubPullRequest
-    template: "{{#fail}}:x: build failed{{/fail}} {{#jobs}} {{#messages}} {{message}} {{/messages}} {{/jobs}}"
+    template: "{{#failed}}:x: build failed{{/failed}} {{#jobs}} {{#messages}} {{message}} {{/messages}} {{/jobs}}"
