--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,7 @@
 build: off
 
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 install:
   - ps: Install-Product node 8
@@ -14,7 +16,7 @@ test_script:
   - ps: $env:warning_ico = ":warning:"
   - ps: $env:success_ico = ":white_check_mark:"
   - ps: $env:changed_screens = (Get-Content -Raw -Path test-dist\screentest\state.json | ConvertFrom-Json).changedScreens
-  - ps: If ($env:changed_screens -gt 0) {Add-AppveyorMessage "$env:warning_ico $env:changed_screens screens have been changed"} else { Add-AppveyorMessage "$env:success_ico no screens changed" }
+  - ps: If ($env:changed_screens -gt 0) {Add-AppveyorMessage "$env:warning_ico $env:changed_screens screens have been changed: https://ci.appveyor.com/project/Streamlabs/streamlabs-obs/build/$env:APPVEYOR_BUILD_VERSION/artifacts"} else { Add-AppveyorMessage "$env:success_ico no screens changed" }
 
 artifacts:
   - path: 'screentest.zip'
