--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Streamlabs streaming software",
   "author": "General Workings, Inc.",
   "license": "GPL-3.0",
-  "version": "0.9.11",
+  "version": "0.8.15-preview.2",
   "main": "main.js",
   "scripts": {
     "compile": "yarn clear && webpack-cli --progress --mode development",
@@ -42,8 +42,7 @@
     ],
     "publish": {
       "provider": "generic",
-      "url": "https://dsimwd4lkhuqh.cloudfront.net",
-      "useMultipleRangeRequest": false
+      "url": "https://d1g6eog1uhe0xm.cloudfront.net"
     },
     "nsis": {
       "license": "AGREEMENT",
