--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "v-tooltip": "^2.0.0-rc.31",
     "vue": "^2.5.12",
     "vue-color": "^2.4.3",
+    "vue-i18n": "^7.6.0",
     "vue-loader": "^14.1.1",
     "vue-multiselect": "https://github.com/stream-labs/vue-multiselect.git",
     "vue-popperjs": "^1.2.2",
