--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "node-fontinfo": "^0.0.2",
     "node-libuiohook": "file:./node-libuiohook",
     "obs-studio-node": "https://github.com/stream-labs/obs-studio-node/releases/download/v0.0.29/iojs-v1.8.4-signed.tar.gz",
+    "recursive-readdir": "^2.2.2",
     "rimraf": "^2.6.1",
     "socket.io-client": "2.0.3",
     "uuid": "^3.0.1"
