--- a/package.json
+++ b/package.json
@@ -78,7 +78,9 @@
     "obs-studio-node": "https://github.com/stream-labs/obs-studio-node/releases/download/v0.0.30/iojs-v1.8.4-signed.tar.gz",
     "rimraf": "^2.6.1",
     "socket.io-client": "2.0.3",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "vue-codemirror": "^4.0.5",
+    "vue-tabs-component": "^1.4.0"
   },
   "devDependencies": {
     "7zip-bin": "^2.0.4",
