--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "rimraf": "^2.6.1",
     "socket.io-client": "2.0.3",
     "uuid": "^3.0.1",
+    "vee-validate": "^2.0.9",
     "vue-codemirror": "^4.0.5",
     "vue-tabs-component": "^1.4.0"
   },
