--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /i18n/en-US
-    translation: /i18n/%locale%/%original_file_name%
+  - source: /app/i18n/en-US
+    translation: /app/i18n/%locale%/%original_file_name%
