--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "vue": "^2.5.16",
     "vue-color": "^2.4.3",
     "vue-i18n": "^7.6.0",
+    "vue-js-modal": "^1.3.15",
     "vue-loader": "^14.1.1",
     "vue-multiselect": "https://github.com/stream-labs/vue-multiselect.git",
     "vue-popperjs": "^1.2.2",
