--- a/package.json
+++ b/package.json
@@ -83,7 +83,10 @@
     "request": "^2.85.0",
     "rimraf": "^2.6.1",
     "socket.io-client": "2.0.3",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "vee-validate": "^2.0.9",
+    "vue-codemirror": "^4.0.5",
+    "vue-spinner": "^1.0.3"
   },
   "devDependencies": {
     "7zip-bin": "^2.0.4",
