--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ build: off
 install:
   - ps: Install-Product node 8
   - git submodule update --init --recursive
-  - yarn install
+  - yarn install --frozen-lockfile --check-files
   - yarn install-plugins
   - yarn compile:ci
 
