--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "uuid": "^3.0.1",
     "vee-validate": "^2.0.9",
     "vue-codemirror": "^4.0.5",
-    "vue-spinner": "^1.0.3"
+    "vue-spinner": "^1.0.3",
+    "vue-toasted": "^1.1.24"
   },
   "devDependencies": {
     "7zip-bin": "^2.0.4",
