--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@types/request": "^2.47.0",
     "@types/socket.io-client": "^1.4.31",
     "@types/urijs": "^1.15.37",
+    "@types/uuid": "^3.4.3",
     "@types/webdriverio": "^4.8.6",
     "@xkeshi/vue-qrcode": "^0.3.0",
     "archiver": "^2.0.3",
