--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "rimraf": "^2.6.1",
     "socket.io-client": "2.0.3",
     "uuid": "^3.0.1",
-    "vee-validate": "^2.0.9",
+    "vee-validate": "^2.1.0-beta.6",
     "vue-codemirror": "^4.0.5",
     "vue-spinner": "^1.0.3",
     "vue-toasted": "^1.1.24"
@@ -123,6 +123,7 @@
     "eslint-plugin-vue": "^2.0.1",
     "file-loader": "^1.1.10",
     "fuse.js": "^3.2.0",
+    "hyperform": "^0.9.14",
     "js-yaml": "^3.8.3",
     "less": "^2.7.2",
     "less-loader": "^4.0.6",
@@ -133,6 +134,7 @@
     "pngjs": "^3.3.1",
     "progress": "^2.0.0",
     "raven-js": "^3.20.1",
+    "reflect-metadata": "^0.1.12",
     "rxjs": "^5.4.3",
     "sl-vue-tree": "https://github.com/stream-labs/sl-vue-tree.git",
     "sockjs": "^0.3.19",
@@ -155,7 +157,7 @@
     "vue-loader": "^14.1.1",
     "vue-multiselect": "https://github.com/stream-labs/vue-multiselect.git",
     "vue-popperjs": "^1.2.2",
-    "vue-property-decorator": "^5.0.1",
+    "vue-property-decorator": "^7.0.0",
     "vue-slider-component": "^2.2.7",
     "vue-template-compiler": "^2.5.16",
     "vuedraggable": "^2.8.5",
