--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "font-manager": "git+https://github.com/computerquip-streamlabs/font-manager.git",
     "node-fontinfo": "^0.0.2",
     "node-gyp": "^3.6.2",
-    "node-libuiohook": "file:./node-libuiohook",
+    "node-libuiohook": "git+https://github.com/stream-labs/node-libuiohook.git",
     "obs-studio-node": "https://github.com/stream-labs/obs-studio-node/releases/download/v0.0.45/iojs-v2.0.4-signed.tar.gz",
     "recursive-readdir": "^2.2.2",
     "request": "^2.85.0",
