fix(CI): Added yarn.lock check (#544)
* fix(CI): Added yarn lock check

* fix(yarn): Added yarn.lock check to plugins install script

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,8 @@ build: off
 
 install:
   - ps: Install-Product node 8
-  - yarn install
+  - git submodule update --init --recursive
+  - yarn install --frozen-lockfile --check-files
   - yarn install-plugins
   - yarn compile:ci
 
