--- a/package.json
+++ b/package.json
@@ -144,7 +144,7 @@
     "traverse": "0.6.6",
     "ts-loader": "4.4.2",
     "tslint": "5.8.0",
-    "tslint-config-airbnb": "5.9.2",
+    "tslint-config-prettier": "^1.14.0",
     "tslint-loader": "3.6.0",
     "typedoc": "0.11.1",
     "typescript": "2.6.2",
