--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
     "vuedraggable": "2.8.5",
     "vuex": "3.0.1",
     "webpack": "4.8.3",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "2.1.3"
   }
 }
