--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "font-manager": "git+https://github.com/computerquip-streamlabs/font-manager.git",
     "node-fontinfo": "https://github.com/stream-labs/node-fontinfo/releases/download/v0.0.3/iojs-v2.0.5-node-fontinfo.tar.gz",
     "node-gyp": "^3.6.2",
-    "node-libuiohook": "git+https://github.com/stream-labs/node-libuiohook.git",
+    "node-libuiohook": "https://github.com/stream-labs/node-libuiohook/releases/download/v0.0.1/iojs-v2.0.5-node-libuiohook.tar.gz",
     "obs-studio-node": "https://github.com/stream-labs/obs-studio-node/releases/download/v0.0.47/iojs-v2.0.4-signed.tar.gz",
     "recursive-readdir": "^2.2.2",
     "request": "^2.85.0",
