--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "electron-updater": "^3.0.1",
     "electron-window-state": "^4.1.1",
     "font-manager": "git+https://github.com/computerquip-streamlabs/font-manager.git",
-    "node-fontinfo": "^0.0.2",
+    "node-fontinfo": "https://github.com/stream-labs/node-fontinfo/releases/download/v0.0.3/iojs-v2.0.5-node-fontinfo.tar.gz",
     "node-gyp": "^3.6.2",
     "node-libuiohook": "git+https://github.com/stream-labs/node-libuiohook.git",
     "obs-studio-node": "https://github.com/stream-labs/obs-studio-node/releases/download/v0.0.47/iojs-v2.0.4-signed.tar.gz",
