--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "backtrace-node": "^0.7.3",
     "electron-updater": "^3.0.1",
     "electron-window-state": "^4.1.1",
-    "font-manager": "git+https://github.com/computerquip-streamlabs/font-manager.git",
+    "font-manager": "https://github.com/stream-labs/font-manager/releases/download/v1.0.0/iojs-v2.0.5-font-manager.tar.gz",
     "node-fontinfo": "https://github.com/stream-labs/node-fontinfo/releases/download/v0.0.3/iojs-v2.0.5-node-fontinfo.tar.gz",
     "node-gyp": "^3.6.2",
     "node-libuiohook": "https://github.com/stream-labs/node-libuiohook/releases/download/v0.0.1/iojs-v2.0.5-node-libuiohook.tar.gz",
