--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "watch": "yarn clear && webpack-cli --watch --progress --mode development",
     "start": "electron .",
     "install-plugins": "yarn install --frozen-lockfile --check-files --cwd bin && node bin/install-plugins.js",
-    "clear-plugins": "rm -rf plugins",
-    "package": "rm -rf dist && build -w --x64 --config.extraMetadata.env=production",
-    "package:preview": "rm -rf dist && build -w --x64 --config.extraMetadata.env=production --config.extraMetadata.name=\"slobs-client-preview\" --config.productName=\"Streamlabs OBS Preview\" --config.appId=\"com.streamlabs.slobspreview\"",
-    "package:ipc": "rm -rf dist && build -w --x64 --config.extraMetadata.env=production --config.extraMetadata.name=\"slobs-client-ipc\" --config.productName=\"Streamlabs OBS IPC\" --config.appId=\"com.streamlabs.slobsipc\"",
+    "clear-plugins": "shx rm -rf plugins",
+    "package": "shx rm -rf dist && build -w --x64 --config.extraMetadata.env=production",
+    "package:preview": "shx rm -rf dist && build -w --x64 --config.extraMetadata.env=production --config.extraMetadata.name=\"slobs-client-preview\" --config.productName=\"Streamlabs OBS Preview\" --config.appId=\"com.streamlabs.slobspreview\"",
+    "package:ipc": "shx rm -rf dist && build -w --x64 --config.extraMetadata.env=production --config.extraMetadata.name=\"slobs-client-ipc\" --config.productName=\"Streamlabs OBS IPC\" --config.appId=\"com.streamlabs.slobsipc\"",
     "release": "yarn install --cwd bin && node bin/release.js",
     "test": "tsc -p test && ava -v",
-    "clear": "rm -rf bundles/media",
+    "clear": "shx rm -rf bundles/media",
     "typedoc": "typedoc --out docs/dist ./app/services --mode modules --theme ./docs/theme --readme ./docs/README.md --ignoreCompilerErrors --excludePrivate --excludeExternals --hideGenerator",
     "compile-tests": "tsc -p test",
     "screentest": "node test/screentest/runner.js"
@@ -134,6 +134,7 @@
     "raven-js": "3.26.4",
     "reflect-metadata": "0.1.12",
     "rxjs": "5.5.11",
+    "shx": "^0.3.2",
     "sl-vue-tree": "https://github.com/stream-labs/sl-vue-tree.git",
     "sockjs": "0.3.19",
     "sockjs-client": "1.1.5",
