--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "vee-validate": "^2.1.0-beta.6",
     "vue-codemirror": "^4.0.5",
     "vue-spinner": "^1.0.3",
-    "vue-toasted": "^1.1.24"
+    "vue-toasted": "^1.1.24",
+    "vue2-timepicker": "^0.1.4"
   },
   "devDependencies": {
     "7zip-bin": "2.4.1",
@@ -106,6 +107,7 @@
     "babel-loader": "7.1.5",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.5",
+    "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "circular-dependency-plugin": "3.0.0",
